lab3/y.output
State 2 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | lvalue ASSIGN exp
    4    | INT
    5    | STRING
    6    | voidexp
    7    | seqexp
    8    | MINUS exp
    9    | exp PLUS exp
   10    | exp MINUS exp
   11    | exp TIMES exp
   12    | exp DIVIDE exp
   13    | exp EQ exp
   14    | exp NEQ exp
   15    | exp LT exp
   16    | exp LE exp
   17    | exp GT exp
   18    | exp GE exp
   19    | exp AND exp
   20    | exp OR exp
   21    | ID LBRACK exp RBRACK OF exp
   22    | ID LBRACE RBRACE
   23    | ID LBRACE recorditems RBRACE
   24    | IF exp THEN exp
   25    | IF exp THEN exp ELSE exp
   26    | WHILE exp DO exp
   27    | FOR ID ASSIGN exp TO exp DO exp
   28    | BREAK
   29    | LET decs IN END
   30    | LET decs IN exps END
   31    | error SEMICOLON exp
   32    | ID LPAREN RPAREN
   33    | ID LPAREN args RPAREN

   34 voidexp: NIL

   35 seqexp: LPAREN error RPAREN
   36       | LPAREN RPAREN
   37       | LPAREN exps RPAREN

   38 exps: exp
   39     | exp SEMICOLON exps

   40 recorditem: ID EQ exp

   41 recorditems: recorditem
   42            | recorditem COMMA recorditems

   43 args: exp
   44     | exp COMMA args

   45 tyfield: ID COLON ID

   46 tyfields: tyfield
   47         | tyfield COMMA tyfields
   48         | %empty

   49 ty: ID
   50   | LBRACE tyfields RBRACE
   51   | ARRAY OF ID

   52 tydec: TYPE ID EQ ty

   53 tydecs: tydec
   54       | tydec tydecs

   55 vardec: VAR ID ASSIGN exp
   56       | VAR ID COLON ID ASSIGN exp

   57 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   58       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   59 fundecs: fundec
   60        | fundec fundecs

   61 decs: dec decs
   62     | %empty

   63 dec: tydecs
   64    | vardec
   65    | fundecs

   66 lvalue: ID
   67       | lvalue DOT ID
   68       | lvalue LBRACK exp RBRACK
   69       | ID LBRACK exp RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256) 31 35
ID (258) 21 22 23 27 32 33 40 45 49 51 52 55 56 57 58 66 67 69
STRING (259) 5
INT (260) 4
COMMA (261) 42 44 47
COLON (262) 45 56 58
SEMICOLON (263) 31 39
LPAREN (264) 32 33 35 36 37 57 58
RPAREN (265) 32 33 35 36 37 57 58
LBRACK (266) 21 68 69
RBRACK (267) 21 68 69
LBRACE (268) 22 23 50
RBRACE (269) 22 23 50
DOT (270) 67
PLUS (271) 9
MINUS (272) 8 10
TIMES (273) 11
DIVIDE (274) 12
EQ (275) 13 40 52 57 58
NEQ (276) 14
LT (277) 15
LE (278) 16
GT (279) 17
GE (280) 18
AND (281) 19
OR (282) 20
ASSIGN (283) 3 27 55 56
ARRAY (284) 51
IF (285) 24 25
THEN (286) 24 25
ELSE (287) 25
WHILE (288) 26
FOR (289) 27
TO (290) 27
DO (291) 26 27
LET (292) 29 30
IN (293) 29 30
END (294) 29 30
OF (295) 21 51
BREAK (296) 28
NIL (297) 34
FUNCTION (298) 57 58
VAR (299) 55 56
TYPE (300) 52
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
exp (49)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30 31 32 33, on right: 1 3 8 9 10 11 12 13
    14 15 16 17 18 19 20 21 24 25 26 27 31 38 39 40 43 44 55 56 57
    58 68 69
voidexp (50)
    on left: 34, on right: 6
seqexp (51)
    on left: 35 36 37, on right: 7
exps (52)
    on left: 38 39, on right: 30 37 39
recorditem (53)
    on left: 40, on right: 41 42
recorditems (54)
    on left: 41 42, on right: 23 42
args (55)
    on left: 43 44, on right: 33 44
tyfield (56)
    on left: 45, on right: 46 47
tyfields (57)
    on left: 46 47 48, on right: 47 50 57 58
ty (58)
    on left: 49 50 51, on right: 52
tydec (59)
    on left: 52, on right: 53 54
tydecs (60)
    on left: 53 54, on right: 54 63
vardec (61)
    on left: 55 56, on right: 64
fundec (62)
    on left: 57 58, on right: 59 60
fundecs (63)
    on left: 59 60, on right: 60 65
decs (64)
    on left: 61 62, on right: 29 30 61
dec (65)
    on left: 63 64 65, on right: 61
lvalue (66)
    on left: 66 67 68 69, on right: 2 3 67 68


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    program  go to state 13
    exp      go to state 14
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 1

   31 exp: error . SEMICOLON exp

    SEMICOLON  shift, and go to state 18


State 2

   21 exp: ID . LBRACK exp RBRACK OF exp
   22    | ID . LBRACE RBRACE
   23    | ID . LBRACE recorditems RBRACE
   32    | ID . LPAREN RPAREN
   33    | ID . LPAREN args RPAREN
   66 lvalue: ID .
   69       | ID . LBRACK exp RBRACK

    LPAREN  shift, and go to state 19
    LBRACK  shift, and go to state 20
    LBRACE  shift, and go to state 21

    LBRACK    [reduce using rule 66 (lvalue)]
    $default  reduce using rule 66 (lvalue)


State 3

    5 exp: STRING .

    $default  reduce using rule 5 (exp)


State 4

    4 exp: INT .

    $default  reduce using rule 4 (exp)


State 5

   35 seqexp: LPAREN . error RPAREN
   36       | LPAREN . RPAREN
   37       | LPAREN . exps RPAREN

    error   shift, and go to state 22
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    RPAREN  shift, and go to state 23
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 24
    voidexp  go to state 15
    seqexp   go to state 16
    exps     go to state 25
    lvalue   go to state 17


State 6

    8 exp: MINUS . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 26
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 7

   24 exp: IF . exp THEN exp
   25    | IF . exp THEN exp ELSE exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 27
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 8

   26 exp: WHILE . exp DO exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 28
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 9

   27 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 29


State 10

   29 exp: LET . decs IN END
   30    | LET . decs IN exps END

    FUNCTION  shift, and go to state 30
    VAR       shift, and go to state 31
    TYPE      shift, and go to state 32

    $default  reduce using rule 62 (decs)

    tydec    go to state 33
    tydecs   go to state 34
    vardec   go to state 35
    fundec   go to state 36
    fundecs  go to state 37
    decs     go to state 38
    dec      go to state 39


State 11

   28 exp: BREAK .

    $default  reduce using rule 28 (exp)


State 12

   34 voidexp: NIL .

    $default  reduce using rule 34 (voidexp)


State 13

    0 $accept: program . $end

    $end  shift, and go to state 40


State 14

    1 program: exp .
    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp
   13    | exp . EQ exp
   14    | exp . NEQ exp
   15    | exp . LT exp
   16    | exp . LE exp
   17    | exp . GT exp
   18    | exp . GE exp
   19    | exp . AND exp
   20    | exp . OR exp

    PLUS    shift, and go to state 41
    MINUS   shift, and go to state 42
    TIMES   shift, and go to state 43
    DIVIDE  shift, and go to state 44
    EQ      shift, and go to state 45
    NEQ     shift, and go to state 46
    LT      shift, and go to state 47
    LE      shift, and go to state 48
    GT      shift, and go to state 49
    GE      shift, and go to state 50
    AND     shift, and go to state 51
    OR      shift, and go to state 52

    $default  reduce using rule 1 (program)


State 15

    6 exp: voidexp .

    $default  reduce using rule 6 (exp)


State 16

    7 exp: seqexp .

    $default  reduce using rule 7 (exp)


State 17

    2 exp: lvalue .
    3    | lvalue . ASSIGN exp
   67 lvalue: lvalue . DOT ID
   68       | lvalue . LBRACK exp RBRACK

    LBRACK  shift, and go to state 53
    DOT     shift, and go to state 54
    ASSIGN  shift, and go to state 55

    $default  reduce using rule 2 (exp)


State 18

   31 exp: error SEMICOLON . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 56
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 19

   32 exp: ID LPAREN . RPAREN
   33    | ID LPAREN . args RPAREN

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    RPAREN  shift, and go to state 57
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 58
    voidexp  go to state 15
    seqexp   go to state 16
    args     go to state 59
    lvalue   go to state 17


State 20

   21 exp: ID LBRACK . exp RBRACK OF exp
   69 lvalue: ID LBRACK . exp RBRACK

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 60
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 21

   22 exp: ID LBRACE . RBRACE
   23    | ID LBRACE . recorditems RBRACE

    ID      shift, and go to state 61
    RBRACE  shift, and go to state 62

    recorditem   go to state 63
    recorditems  go to state 64


State 22

   31 exp: error . SEMICOLON exp
   35 seqexp: LPAREN error . RPAREN

    SEMICOLON  shift, and go to state 18
    RPAREN     shift, and go to state 65


State 23

   36 seqexp: LPAREN RPAREN .

    $default  reduce using rule 36 (seqexp)


State 24

    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp
   13    | exp . EQ exp
   14    | exp . NEQ exp
   15    | exp . LT exp
   16    | exp . LE exp
   17    | exp . GT exp
   18    | exp . GE exp
   19    | exp . AND exp
   20    | exp . OR exp
   38 exps: exp .
   39     | exp . SEMICOLON exps

    SEMICOLON  shift, and go to state 66
    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
    TIMES      shift, and go to state 43
    DIVIDE     shift, and go to state 44
    EQ         shift, and go to state 45
    NEQ        shift, and go to state 46
    LT         shift, and go to state 47
    LE         shift, and go to state 48
    GT         shift, and go to state 49
    GE         shift, and go to state 50
    AND        shift, and go to state 51
    OR         shift, and go to state 52

    $default  reduce using rule 38 (exps)


State 25

   37 seqexp: LPAREN exps . RPAREN

    RPAREN  shift, and go to state 67


State 26

    8 exp: MINUS exp .
    9    | exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp
   13    | exp . EQ exp
   14    | exp . NEQ exp
   15    | exp . LT exp
   16    | exp . LE exp
   17    | exp . GT exp
   18    | exp . GE exp
   19    | exp . AND exp
   20    | exp . OR exp

    $default  reduce using rule 8 (exp)


State 27

    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp
   13    | exp . EQ exp
   14    | exp . NEQ exp
   15    | exp . LT exp
   16    | exp . LE exp
   17    | exp . GT exp
   18    | exp . GE exp
   19    | exp . AND exp
   20    | exp . OR exp
   24    | IF exp . THEN exp
   25    | IF exp . THEN exp ELSE exp

    PLUS    shift, and go to state 41
    MINUS   shift, and go to state 42
    TIMES   shift, and go to state 43
    DIVIDE  shift, and go to state 44
    EQ      shift, and go to state 45
    NEQ     shift, and go to state 46
    LT      shift, and go to state 47
    LE      shift, and go to state 48
    GT      shift, and go to state 49
    GE      shift, and go to state 50
    AND     shift, and go to state 51
    OR      shift, and go to state 52
    THEN    shift, and go to state 68


State 28

    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp
   13    | exp . EQ exp
   14    | exp . NEQ exp
   15    | exp . LT exp
   16    | exp . LE exp
   17    | exp . GT exp
   18    | exp . GE exp
   19    | exp . AND exp
   20    | exp . OR exp
   26    | WHILE exp . DO exp

    PLUS    shift, and go to state 41
    MINUS   shift, and go to state 42
    TIMES   shift, and go to state 43
    DIVIDE  shift, and go to state 44
    EQ      shift, and go to state 45
    NEQ     shift, and go to state 46
    LT      shift, and go to state 47
    LE      shift, and go to state 48
    GT      shift, and go to state 49
    GE      shift, and go to state 50
    AND     shift, and go to state 51
    OR      shift, and go to state 52
    DO      shift, and go to state 69


State 29

   27 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 70


State 30

   57 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   58       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 71


State 31

   55 vardec: VAR . ID ASSIGN exp
   56       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 72


State 32

   52 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 73


State 33

   53 tydecs: tydec .
   54       | tydec . tydecs

    TYPE  shift, and go to state 32

    TYPE      [reduce using rule 53 (tydecs)]
    $default  reduce using rule 53 (tydecs)

    tydec   go to state 33
    tydecs  go to state 74


State 34

   63 dec: tydecs .

    $default  reduce using rule 63 (dec)


State 35

   64 dec: vardec .

    $default  reduce using rule 64 (dec)


State 36

   59 fundecs: fundec .
   60        | fundec . fundecs

    FUNCTION  shift, and go to state 30

    FUNCTION  [reduce using rule 59 (fundecs)]
    $default  reduce using rule 59 (fundecs)

    fundec   go to state 36
    fundecs  go to state 75


State 37

   65 dec: fundecs .

    $default  reduce using rule 65 (dec)


State 38

   29 exp: LET decs . IN END
   30    | LET decs . IN exps END

    IN  shift, and go to state 76


State 39

   61 decs: dec . decs

    FUNCTION  shift, and go to state 30
    VAR       shift, and go to state 31
    TYPE      shift, and go to state 32

    $default  reduce using rule 62 (decs)

    tydec    go to state 33
    tydecs   go to state 34
    vardec   go to state 35
    fundec   go to state 36
    fundecs  go to state 37
    decs     go to state 77
    dec      go to state 39


State 40

    0 $accept: program $end .

    $default  accept


State 41

    9 exp: exp PLUS . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 78
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 42

   10 exp: exp MINUS . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 79
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 43

   11 exp: exp TIMES . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 80
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 44

   12 exp: exp DIVIDE . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 81
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 45

   13 exp: exp EQ . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 82
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 46

   14 exp: exp NEQ . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 83
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 47

   15 exp: exp LT . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 84
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 48

   16 exp: exp LE . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 85
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 49

   17 exp: exp GT . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 86
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 50

   18 exp: exp GE . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 87
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 51

   19 exp: exp AND . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      go to state 88
    voidexp  go to state 15
    seqexp   go to state 16
    lvalue   go to state 17


State 52

   20 exp: exp OR . exp
